Add a custom preview image - branding is important
* Change the name of the banner because it's more than this

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,6 +4,7 @@
     --deepset: #188bf5;
     --green: #2c542f;
     --powder-pink: #f4abba;
+    --light-green:#CBDDD0;
 
     --small-screen: 1250px;
 }
@@ -90,7 +91,7 @@ body {
     max-width: 300px;
 }
 
-.banner {
+.cute-icons {
     display: block;
     margin: auto;
     width: 100%;
